--- a/locales/de.json
+++ b/locales/de.json
@@ -8,6 +8,7 @@
       "language": "Deutsch"
     }
   },
+  "message": "Frohes Neues Jahr 2019",
   "rules-dialog": {
     "title": "Dear user",
     "description": "By clicking \"Accept\" or closing the window by clicking on the X, you agree to the following conditions.",
