--- a/locales/pl.json
+++ b/locales/pl.json
@@ -8,6 +8,7 @@
       "language": "Polski"
     }
   },
+  "message": "Szczęśliwego Nowego Roku 2019",
   "rules-dialog": {
     "title": "Szanowny Użytkowniku",
     "description": "Klikając „Akceptuję” lub zamykając okno przez kliknięcie w znaczek X, zgadzasz się na poniższe warunki.",
