--- a/locales/en.json
+++ b/locales/en.json
@@ -8,6 +8,7 @@
       "language": "English"
     }
   },
+  "message": "Happy New Year 2019",
   "rules-dialog": {
     "title": "Dear user",
     "description": "By clicking \"Accept\" or closing the window by clicking on the X, you agree to the following conditions.",
