update i18n keys and locales/de

--- a/locales/de/home.json
+++ b/locales/de/home.json
@@ -164,5 +164,6 @@
       "title": "Erstellen Sie ein Geschäftsprofil",
       "description": "Erstellen Sie ein detailliertes Profil für das Unternehmen, das Sie betreiben."
     }
-  }
+  },
+  "message": "Frohes Neues Jahr 2019"
 }
