--- a/locales/en/home.json
+++ b/locales/en/home.json
@@ -59,7 +59,7 @@
   "categories": {
     "title-section": "Categories",
     "club": "clubs",
-    "barAndPub": "bars and pubs",
+    "bar-and-pub": "bars and pubs",
     "coffeehouse": "coffeehouses",
     "food": "food",
     "entertainment": "entertainment",
