--- a/locales/en/agreements.json
+++ b/locales/en/agreements.json
@@ -9,37 +9,37 @@
   "user": "User - a person using the application.",
   "rules": [
     {
-      "message": "Użytkownik korzystający z aplikacji Yourcity akceptuje regulamin i postanowienia oraz zapoznał się ze wszystkimi zasadami zawartymi w regulaminie."
+      "message": "The user using the Yourcity application accepts the rules and regulations and reads all the rules contained in the regulations."
     },
     {
-      "message": "Użytkownik zobiwiązuje się do korzystania z aplikacji w sposób nie zaburzający jej działania oraz integralności, oraz nie naraża aplikacji na celowe obciążenie."
+      "message": "The user undertakes to use the application in a way that does not interfere with its operation and integrity, and does not expose the application to a deliberate burden."
     },
     {
-      "message": "Twórca aplikacji Yourcity nie bierze na siebie odpowiedzialności w związku z niepoprawnym działaniem strony lub nieaktualnymi lub nieprawidłowymi informacjami jakie są wyświetlane podczas wyszukiwania profili."
+      "message": "The creator of the Yourcity application does not take any responsibility for the incorrect operation of the page or outdated or incorrect information that is displayed during the search of profiles."
     },
     {
-      "message": "Aplikacja Yourcity jest w ciągłej rozbudowie i może czasami działać niestabilnie lub w ogóle nie być dostępna dla użytkowników podczas aktualizacji."
+      "message": "The Yourcity application is in continuous development and can sometimes be unstable or not be available to users during the upgrade."
     },
     {
-      "message": "Źródłem danych dla aplikacji Yourcity jest <a href=\"https://developers.facebook.com/docs/places/web\" target=\"_blank\">Places Graph API - Facebook<a>."
+      "message": "The source of data for Yourcity is <a href=\"https://developers.facebook.com/docs/places/web\" target=\"_blank\">Places Graph API - Facebook<a>."
     },
     {
-      "message": "Aplikacja wykorzystuje pliki cookie jedynie w celach statystycznych."
+      "message": "The application uses cookies only for statistical purposes."
     },
     {
-      "message": "Aplikacja Yourcity może zostać w każdej chwili wyłączona przez osobę nią zarządzającą i przestać świadczyć usługi o charakterze informacyjnym."
+      "message": "The Yourcity application can be disabled at any time by the person managing it and cease to provide information services."
     },
     {
-      "message": "Należy pamiętać, że informacje o profilach mogą być nieaktualne lub nieprawdziwe na co twórca nie ma wpływu."
+      "message": "Please note that profile information may be out of date or untrue what the creator has no influence on."
     },
     {
-      "message": "Wszystkie zdjęcia na stronie głównej, stronie z galerią zdjęć oraz stronie z listą wszystkich karajów są własnością twórcy. Zabrania się kopiowania i nieuprawnionego wykorzystywania bez zgody autora."
+      "message": "All photos on the main page, the photo gallery page and the list of all countries are the property of the creator. It is forbidden to copy and unauthorized use without the author's consent."
     },
     {
-      "message": "Twórca dokłada wszelkich starań by aplikacja działała stabilnie oraz jak najlepiej."
+      "message": "The creator makes every effort to ensure that the application works stably and as well as possible."
     },
     {
-      "message": "W przypadku zaobserowania niestabilnej pracy aplikacji lub znalezienia błędów użytkonik proszony jest o kontakt z twórcą i opisanie problemu."
+      "message": "If you observe unstable work of the application or find errors, the user is asked to contact the developer and describe the problem."
     }
   ]
 }
