update founder page

--- a/locales/pl/founder.json
+++ b/locales/pl/founder.json
@@ -4,5 +4,5 @@
     "description": "Przeczytaj więcej o twórcy platformy Yourcity.",
     "keywords": "twórca, twórca yourcity, inżynier yourcity"
   },
-  "title": "O twórcy"
+  "title": "Twórca"
 }
